--- a/examples/react_webpack/BUILD.bazel
+++ b/examples/react_webpack/BUILD.bazel
@@ -1,7 +1,9 @@
+load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 load("@npm//@bazel/typescript:index.bzl", "ts_project")
 load("@npm//http-server:index.bzl", "http_server")
 load("@npm//sass:index.bzl", "sass")
 load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
+load("@npm//webpack-dev-server:index.bzl", "webpack_dev_server")
 
 sass(
     name = "styles",
@@ -46,4 +48,22 @@ http_server(
         "index.html",
     ],
     templated_args = ["."],
+)
+
+webpack_dev_server(
+    name = "devserver",
+    args = [
+        "$(rootpath index.js)",
+        "--config",
+        "$(execpath webpack.config.js)",
+    ],
+    data = [
+        "index.js",
+        "styles.css",
+        "webpack.config.js",
+        "@npm//:node_modules",
+    ],
+    tags = [
+        "ibazel_notify_changes",
+    ],
 )
