--- a/examples/react_webpack/package.json
+++ b/examples/react_webpack/package.json
@@ -20,6 +20,7 @@
     },
     "scripts": {
         "build": "bazel build //...",
-        "serve": "ibazel run :server"
+        "serve": "ibazel run :server",
+        "devserver": "ibazel run :devserver"
     }
 }
